tests/baselines/reference/es6ClassTest7.errors.txt
es6ClassTest7.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== es6ClassTest7.ts (1 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Foo {
        }
    }
    
    class Bar extends M.Foo {
    }
    